fix: account dropdown overlapping issue

--- a/src/components/layouts/MainMenu/index.module.scss
+++ b/src/components/layouts/MainMenu/index.module.scss
@@ -26,7 +26,7 @@
 
 .menu {
   display: flex;
-  z-index: 5001;
+  z-index: 999;
 }
 
 div.menu div .menuOption.navOption {
